Removes hard coded  z-index value from datepicker component styles. Also solves github issue #77

--- a/less/modules/js.datepicker.less
+++ b/less/modules/js.datepicker.less
@@ -7,7 +7,7 @@
     background: @datepicker-bgColor;
     position: absolute;
     display: none;
-    z-index:1
+    z-index:@layer-10
 
     a {
         text-decoration: none;
